# inference-broker

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  limitations.md  prd.md  protocol.md  provider-adapters.md  review-notes.md  roadmap.md  threat-model.md
examples/immersive-video-planner/: expected-output.example.json  input.json  input.schema.json  output.schema.json  prompt.md
examples/immersive-video-planner/mock-fixtures/: ff0a520e93223f12.json
examples/private-eval/: input.json  input.schema.json  output.schema.json  prompt.md
examples/private-eval/mock-fixtures/: eb8e18a7535d16ab.json
scripts/: demo.sh  lint.sh  test.sh
sealedx/: __init__.py  cli.py
sealedx/broker/: errors.py  runtime.py
sealedx/grants/: credentials.py  manager.py  models.py
sealedx/packaging/: builder.py  models.py  registry.py
sealedx/providers/: anthropic_adapter.py  base.py  cost_table.py  mock.py  openai_adapter.py  registry.py
sealedx/receipts/: canonical.py  issuer.py  models.py  verifier.py
sealedx/schemas/: validate.py
sealedx/security/: hashing.py  keys.py  redaction.py
sealedx/storage/: paths.py
tests/: conftest.py
tests/integration/: test_broker_e2e.py  test_cli.py
tests/unit/: test_canonical.py  test_grants.py  test_hashing.py  test_mock_provider.py  test_packaging.py  test_receipt_signing.py  test_redaction.py  test_schema_validation.py
