[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sealedx"
version = "0.1.0"
description = "Delegated private AI workflow execution: vendor-owned workflow IP + customer-owned inference spend, brokered with signed execution receipts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AITrekker" }]
keywords = [
    "ai",
    "agents",
    "mcp",
    "inference",
    "workflow",
    "broker",
    "confidential-compute",
    "delegated-execution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "pynacl>=1.5",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
huggingface = ["huggingface-hub>=0.24"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
sealedx = "sealedx.cli:app"

[project.urls]
Homepage = "https://github.com/AITrekker/inference-broker"
Issues = "https://github.com/AITrekker/inference-broker/issues"

[tool.hatch.build.targets.wheel]
packages = ["sealedx"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ANN"]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # asserts ok in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]
